INCLUDE(../src/Scripts/CreateSymlink.cmake)

IF(MSYS)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ELSEIF(APPLE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
ELSEIF(UNIX)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ENDIF()

IF(APPLE)
    SET(EXECUTABLE_TYPE MACOSX_BUNDLE)
ENDIF()

# Set the output directory to the user defined one or the default one
IF(NOT JATTA_OUTPUT_DIR STREQUAL "")
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${JATTA_OUTPUT_DIR})
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${JATTA_OUTPUT_DIR})
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${JATTA_OUTPUT_DIR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${JATTA_OUTPUT_DIR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${JATTA_OUTPUT_DIR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${JATTA_OUTPUT_DIR})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${JATTA_OUTPUT_DIR})
ENDIF()

ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(window)
ADD_SUBDIRECTORY(echotest)
