# Generate configuration file
include(Config/Config.cmake)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Config/Config.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/CGUL/Config.hpp)

# Include the source tree
add_subdirectory(CGUL)
set(CGUL_INSTALL ${CGUL_INSTALL} ${CMAKE_CURRENT_SOURCE_DIR}/CGUL.hpp)

# Determine dependencies
include(dependencies.cmake)

# Determine library type
set(CGUL_LIBRARY_TYPE SHARED)
if(CGUL_STATIC)

    set(CGUL_LIBRARY_TYPE STATIC)

endif()

set(DEFINE_DEBUG ${MSVC})

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_REQUIRED_INCLUDES})
if(APPLE)

    include_directories(/Developer/Headers/FlatCarbon)

endif()
add_definitions(-DCGUL_BUILD -DCGUL_INCLUDES ${CMAKE_REQUIRED_FLAGS})
add_library(CGUL ${CGUL_LIBRARY_TYPE} ${CGUL_SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/CGUL/Config.hpp)

set_property(TARGET CGUL PROPERTY OUTPUT_NAME "${CGUL_OUTPUT_NAME}")
set_property(TARGET CGUL PROPERTY ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CGUL_LIB_DIR}")
set_property(TARGET CGUL PROPERTY LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CGUL_LIB_DIR}")
foreach(__CONFIGURATION ${CMAKE_CONFIGURATION_TYPES})

    string(TOUPPER "${__CONFIGURATION}" __CONFIGURATION)
    set_property(TARGET CGUL PROPERTY OUTPUT_NAME_${__CONFIGURATION} "${CGUL_OUTPUT_NAME}${CGUL_POSTFIX_${__CONFIGURATION}}")
    set_property(TARGET CGUL PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${__CONFIGURATION} "${CMAKE_BINARY_DIR}/${CGUL_LIB_DIR}")
    set_property(TARGET CGUL PROPERTY LIBRARY_OUTPUT_DIRECTORY_${__CONFIGURATION} "${CMAKE_BINARY_DIR}/${CGUL_LIB_DIR}")

endforeach()


string(STRIP "${CGUL_LIBRARIES}" CGUL_LIBRARIES)
string(REPLACE " " ";" LIBRARY_LIST "${CGUL_LIBRARIES}")
target_link_libraries(CGUL ${LIBRARY_LIST})

# Get information about the library
if(${DEFINE_DEBUG})

    get_property(CGUL_MODULE_NAME_PATH TARGET CGUL PROPERTY LOCATION)
    get_property(CGUL_MODULE_NAME_PATH_DEBUG TARGET CGUL PROPERTY LOCATION_DEBUG)
    get_filename_component(CGUL_MODULE_NAME_DEBUG ${CGUL_MODULE_NAME_PATH_DEBUG} NAME)

else()

    if("${CMAKE_BUILD_TYPE}" STREQUAL "")

        get_property(CGUL_MODULE_NAME_PATH TARGET CGUL PROPERTY LOCATION)

    else()

        get_property(CGUL_MODULE_NAME_PATH TARGET CGUL PROPERTY LOCATION_${CMAKE_BUILD_TYPE})

    endif()

endif()

get_filename_component(CGUL_MODULE_NAME ${CGUL_MODULE_NAME_PATH} NAME)

# Version info
set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/CGUL/Utility/Version.cpp PROPERTIES COMPILE_DEFINITIONS "_CGUL_MAJOR=${CGUL_VERSION_MAJOR};_CGUL_MINOR=${CGUL_VERSION_MINOR};_CGUL_PATCH=${CGUL_VERSION_PATCH};_COMPILER_NAME=\"${Compiler_NAME_SIMPLE}${Compiler_VERSION}\"")

# Installation setup
include(../cmake/Install.cmake)
