# Jatta - General Utility Library
# Copyright (C) 2012-2013, Joshua Brookover and Amber Thrall
# All rights reserved.

IF(MSYS)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ELSEIF(APPLE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
ELSEIF(UNIX)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ENDIF()

# Set the output directory to the user defined one or the default one
IF(NOT JATTA_OUTPUT_DIR STREQUAL "")
    # TODO: unit tests SHOULD be in their own folders, but for now they're not
    # we need to copy Jatta.dll into this folder for them to work on Windows

    #SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${JATTA_OUTPUT_DIR}/unit_tests)
    #SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${JATTA_OUTPUT_DIR}/unit_tests)
    #SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${JATTA_OUTPUT_DIR}/unit_tests)
    #SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${JATTA_OUTPUT_DIR}/unit_tests)
    #SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${JATTA_OUTPUT_DIR}/unit_tests)
    #SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${JATTA_OUTPUT_DIR}/unit_tests)
    #SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${JATTA_OUTPUT_DIR}/unit_tests)

    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${JATTA_OUTPUT_DIR})
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${JATTA_OUTPUT_DIR})
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${JATTA_OUTPUT_DIR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${JATTA_OUTPUT_DIR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${JATTA_OUTPUT_DIR})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${JATTA_OUTPUT_DIR})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${JATTA_OUTPUT_DIR})
ENDIF()

INCLUDE_DIRECTORIES(${JATTA_INCLUDES})
ADD_SUBDIRECTORY(File)
ADD_SUBDIRECTORY(Utility)

ADD_TEST(File/File ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Test_File_File)

ADD_TEST(Utility/CRC32 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Test_Utility_CRC32)
ADD_TEST(Utility/MD5 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Test_Utility_MD5)
ADD_TEST(Utility/String ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Test_Utility_String)
ADD_TEST(Utility/Timer ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Test_Utility_Timer)