CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(3DWorld)
SET(JATTA_LIB_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
SET(JATTA_DLL_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
SET(JATTA_DIRECTORY ../..)
ADD_SUBDIRECTORY(${JATTA_DIRECTORY}/src "${CMAKE_CURRENT_BINARY_DIR}/Jatta")

IF(MSYS)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ELSEIF(APPLE)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ELSEIF(UNIX)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ENDIF()

ADD_EXECUTABLE(3dworld main.cpp)
INCLUDE_DIRECTORIES(${JATTA_DIRECTORY}/src)
TARGET_LINK_LIBRARIES(3dworld Jatta)
