CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(MyProject)
SET(JATTA_NO_JPEG ON)
SET(JATTA_LIB_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
SET(JATTA_DLL_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
SET(JATTA_DIRECTORY ../..)
SET(CMAKE_COLOR_MAKEFILE off)
ADD_SUBDIRECTORY(${JATTA_DIRECTORY}/src "${CMAKE_CURRENT_BINARY_DIR}/Jatta")

IF(MSYS)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ELSEIF(APPLE)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ELSEIF(UNIX)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ENDIF()

ADD_EXECUTABLE(Image main.cpp)
INCLUDE_DIRECTORIES(${JATTA_DIRECTORY}/src)
TARGET_LINK_LIBRARIES(Image Jatta)

ADD_CUSTOM_COMMAND(TARGET Image COMMAND cp -r ${CMAKE_CURRENT_SOURCE_DIR}/Resources ${CMAKE_CURRENT_BINARY_DIR})
