ADD_EXECUTABLE(Image main.cpp)
INCLUDE_DIRECTORIES(${JATTA_INCLUDES})
TARGET_LINK_LIBRARIES(Image Jatta)

IF(WIN32 AND NOT MSYS)
    ADD_CUSTOM_COMMAND(TARGET Image COMMAND echo d | xcopy /E /Y \"${CMAKE_CURRENT_SOURCE_DIR}/../Resources" "${JATTA_OUTPUT_DIR}/Resources\")
ELSE()
    ADD_CUSTOM_COMMAND(TARGET Image COMMAND cp -r ${CMAKE_CURRENT_SOURCE_DIR}/../Resources ${JATTA_OUTPUT_DIR})
ENDIF()
