ADD_EXECUTABLE(Image main.cpp)
INCLUDE_DIRECTORIES(${JATTA_INCLUDES})
TARGET_LINK_LIBRARIES(Image Jatta)

CREATE_SYMLINK_COMMAND("${CMAKE_CURRENT_SOURCE_DIR}/../Resources" "${JATTA_OUTPUT_DIR}/Resources" LINK_COMMAND)
ADD_CUSTOM_COMMAND(TARGET Image COMMAND ${LINK_COMMAND})
CREATE_SYMLINK_COMMAND("${CMAKE_CURRENT_SOURCE_DIR}/../Resources" "${CMAKE_CURRENT_BINARY_DIR}/Resources" LINK_COMMAND)
ADD_CUSTOM_COMMAND(TARGET Image COMMAND ${LINK_COMMAND})