ADD_EXECUTABLE(Text main.cpp)
INCLUDE_DIRECTORIES(${JATTA_INCLUDES})
TARGET_LINK_LIBRARIES(Text Jatta)

CREATE_SYMLINK_COMMAND("${CMAKE_CURRENT_SOURCE_DIR}/../Resources" "${JATTA_OUTPUT_DIR}/Resources" LINK_COMMAND)
ADD_CUSTOM_COMMAND(TARGET Text COMMAND ${LINK_COMMAND})
CREATE_SYMLINK_COMMAND("${CMAKE_CURRENT_SOURCE_DIR}/../Resources" "${CMAKE_CURRENT_BINARY_DIR}/Resources" LINK_COMMAND)
ADD_CUSTOM_COMMAND(TARGET Text COMMAND ${LINK_COMMAND})