SET(MACOSX_BUNDLE_BUNDLE_NAME "Window")
ADD_EXECUTABLE(Window ${EXECUTABLE_TYPE} main.cpp)
INCLUDE_DIRECTORIES(${JATTA_INCLUDES})
TARGET_LINK_LIBRARIES(Window Jatta)

CREATE_SYMLINK_COMMAND("${CMAKE_CURRENT_SOURCE_DIR}/../Resources" "${CMAKE_CURRENT_BINARY_DIR}/Resources" LINK_COMMAND)
ADD_CUSTOM_COMMAND(TARGET Window COMMAND ${LINK_COMMAND})