# Add source directories
add_subdirectory(Assimp)
add_subdirectory(Containers)
add_subdirectory(Cryptography)
add_subdirectory(Exceptions)
add_subdirectory(External)
add_subdirectory(Fonts)
add_subdirectory(Images)
add_subdirectory(Math)
add_subdirectory(Network)
add_subdirectory(OpenGL)
add_subdirectory(PortAudio)
add_subdirectory(Utility)
add_subdirectory(Windows)

set(CGUL_SOURCES ${CGUL_SOURCES} PARENT_SCOPE)
set(CGUL_INSTALL ${CGUL_INSTALL} PARENT_SCOPE)
set(CGUL_PROJECT_FILES ${CGUL_PROJECT_FILES} PARENT_SCOPE)
